Finally, a fix for in-page anchor hidden by the navbar
REF: http://nicolasgallagher.com/jump-links-and-viewport-positioning/demo/

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5236,6 +5236,11 @@ img.about {
 
 :target {
     background-color: #FFF5BB;
+    border-top:50px solid transparent;
+    margin-top:-50px;
+    -webkit-background-clip:padding-box;
+    -moz-background-clip:padding;
+    background-clip:padding-box;
 }
 
 footer p {
